feat(allProject): add mvvm, network services
